# dtsfmt

./: Cargo.toml
src/: context.rs  main.rs  parser.rs  printer.rs  utils.rs
src/config/: indentation.rs  mod.rs
src/test_utils/: spec_helpers.rs
tests/specs/: node_with_address.txt  property_without_value.txt
