[package]
name = "dtsfmt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dtsfmt"
path = "src/main.rs"

[lib]
name = "dtsfmt"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
similar = "2"
toml = "0.8"
tree-sitter = "0.22"
tree-sitter-devicetree = "0.10"
